Added donate and contact pages
Updated navigation bar hyperlinks as well as created news page.

--- a/about.html
+++ b/about.html
@@ -154,8 +154,8 @@
       <nav>
         <a href="index1.html">HOME</a>
         <a href="about.html">ABOUT</a>
-        <a href="#news">NEWS</a>
-        <a href="#donate" id='donate'>DONATE</a>
+        <a href="news.html">NEWS</a>
+        <a href="donate.html" id='donate'>DONATE</a>
       </nav>
     </div>
 
