--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div id="top">
       <div id='logo'>ONE THOUSAND<br>MILES</div>
       <nav>
-        <a href="index1.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="news.html">NEWS</a>
         <a href="donate.html" id='donate'>DONATE</a>
