--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
     <div id="top" style="background-color:black;">
       <div id='logo'>ONE THOUSAND<br>MILES</div>
       <nav>
-        <a href="index1.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="news.html">NEWS</a>
         <a href="donate.html" id='donate'>DONATE</a>
