More styling fixes
about.html and donate.html updates

--- a/donate.html
+++ b/donate.html
@@ -169,7 +169,7 @@
     }
 
     #icons i:hover {
-      font-size:40px;
+      color:black;
       cursor:pointer;
       transition:0.4s;
     }
@@ -217,7 +217,7 @@
       <h3>MEET  THE  DEVELOPER</h3>
       <h2>TRINITY SAZO</h2>
       <img id='trin' src="Photos/trin.jpg" alt="A portrait of Trinity, the website developer.">
-      <p>Trinity Sazo is a recent high school graduate from Phillips Academy at Andover and is currently an incoming college freshman to Columbia University's School of Engineering and Applied Sciences. She has taken multiple computer science courses during her time there including Web Design Basics, AP Computer Science, and a few Python classes. She took on this project to help her friend Elena Vinton spread awareness about her current campaign. Trinity's past projects have included coding a texting simulation as well as a mock-up online literary magazine. To contact her, please use the icons below.</p>
+      <p>Trinity Sazo is a recent high school graduate from Phillips Academy at Andover and is currently an incoming college freshman to Columbia University's School of Engineering and Applied Sciences. She has taken multiple computer science courses during her time at Andover including Web Design Basics, AP Computer Science, and a few Python classes. She took on this project to help her friend Elena Vinton spread awareness about her current campaign. Trinity's past projects have included coding a texting simulation as well as a mock-up online literary magazine. To contact her, please use the icons below.</p>
       <div id="icons">
         <a href="https://www.instagram.com/trinsazo/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="mailto:ts3185@columbia.edu?Subject=I Liked Your Website" target="_top"><i class="far fa-envelope"></i></a>
