--- a/contact.html
+++ b/contact.html
@@ -167,6 +167,13 @@
       transition:0.4s;
     }
 
+    footer {
+      font-size: 12px;
+      margin:20px 0px;
+      text-align:center;
+      color:grey;
+    }
+
   </style>
   <body>
 
@@ -213,6 +220,10 @@
 
       </div>
     </div>
+
+    <footer>
+      Copyright © 2019 Trinity Sazo & Elena Vinton. All rights reserved.
+    </footer>
 
   </body>
 
