--- a/news.html
+++ b/news.html
@@ -179,6 +179,13 @@
       left:40px;
     }
 
+    footer {
+      font-size: 12px;
+      margin:20px 0px;
+      text-align:center;
+      color:grey;
+    }
+
   </style>
   <body>
 
@@ -253,6 +260,10 @@
 
       </div>
     </div>
+
+    <footer>
+      Copyright © 2019 Trinity Sazo & Elena Vinton. All rights reserved.
+    </footer>
 
   </body>
 
