--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,14 @@
     #top {
       position: absolute;
       top: 0;
+      flex-direction:column;
       justify-content: space-between;
       align-items:center;
       width: 100%;
     }
 
     #logo {
+      text-align:center;
       font-size:20px;
       margin:10px 15px;
     }
@@ -172,6 +174,18 @@
       margin:20px 0px;
       text-align:center;
       color:grey;
+    }
+
+    @media only screen and (min-width: 700px) {
+
+      #top {
+        flex-direction:row;
+      }
+
+      #logo {
+        text-align:left;
+      }
+
     }
 
   </style>
