--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>ONE STEP AT A TIME | Elena Vinton</title>
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400i|Red+Hat+Display:500,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b824d885b5.js"></script>
   </head>
 
   <style media="screen">
@@ -135,7 +136,7 @@
       color:green;
     }
 
-    #contact-form {
+    /* #contact-form {
       font-family: "Times", serif;
       margin-top:20px;
     }
@@ -165,6 +166,19 @@
 
     input[type=submit]:hover {
       background-color:grey;
+      cursor:pointer;
+      transition:0.4s;
+    } */
+
+    #icons i {
+      margin:10px 30px 0px 0px;
+      color:green;
+      font-size:35px;
+      transition:0.4s;
+    }
+
+    #icons i:hover {
+      color:black;
       cursor:pointer;
       transition:0.4s;
     }
@@ -214,10 +228,16 @@
         <p><a id='active' href="contact.html">CONTACT</a></p>
       </div>
 
-      <div style='margin-right:20px; width:100%;'>
+      <div style='margin-right:30px; width:100%;'>
         <h2>GET IN TOUCH</h2>
 
-        <form id='contact-form' method="post" action='contact.php'>
+        <div id="icons">
+          <a href="https://www.instagram.com/elena.vinton/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="mailto:elenavinton02@gmail.com?Subject=Hi Elena!" target="_top"><i class="far fa-envelope"></i></a>
+          <!-- <a href="https://www.linkedin.com/in/trinitysazo/" target="_blank"><i class="fab fa-linkedin"></i></a> -->
+        </div>
+
+        <!-- <form id='contact-form' method="post" action='contact.php'>
           <label for="name">Name *</label>
           <input type="text" name="name" class='form-control' placeholder="Your First and Last Name" required>
 
@@ -230,7 +250,7 @@
           <label for="message">Message *</label>
           <textarea name="message" class="form-control" placeholder="Let me know what is on your mind!" row="4" required></textarea>
           <input type="submit" class="form-control submit" name="submit" value="SUBMIT">
-        </form>
+        </form> -->
 
       </div>
     </div>
