--- a/news.html
+++ b/news.html
@@ -245,10 +245,10 @@
         <!-- Some important notes: change the id name to story3, story4, etc. You get the point :) -->
         <!-- Do NOT change the class. -->
         <div class="story" id='story1'>
-          <!-- Below is the data -->
+          <!-- Below is the date -->
           <h4>August 15, 2019</h4>
           <!-- Below is your title -->
-          <h2>Post 1</h2>
+          <h2>Post 1!</h2>
           <!-- Below is your photo! Depending if the photo is vertical or horizontal, change the class name accordingly-->
           <!-- horizontalPhoto for horizontal and verticalPhoto for vertical -->
           <div class='horizontalPhoto'>
